ui/css/treeherder.css
/* ... */
.field-filter {
    margin: 3px;
}

.field-filter a, .th-option-heading a {
    color: white;
    cursor: pointer;
}

.field-filter-placeholder a {
    cursor: pointer;
}

/**
  repository panel
*/

.th-repo-group {
    margin-bottom: 5px;
}

.th-repo-group-items {
    display: inline-block;
    margin: 5px 5px 0 5px;
    min-width: 225px;
}

/**
  Failures
*/

.th-failures-box {
    position: fixed;
    top: 46px;
    right:0px;
    padding:2px;
}

.th-failures-box li{
    background-color: #222;
    color: #999;
    border-color: #080808;
}
.th-failures-box li a{
    color: #428bca;
}

.view-nav {
    background-color: #353f47;
}

.view-nav a {
    color: lightgray;

}

/*
    Resultsets
*/

.th-revision-btn {
    margin-left: 10px;
    width: calc(100% - 170px);
}

.th-action-button span.dropdown:hover ul.dropdown-menu{
    display: block;
}

.th-action-button:after {
  content: none;
}

.th-rs-loading {
    width: 50px;
    display: inline-block;
    height: 35px;
    margin-bottom: -14px;
    margin-left: 5px;
}

.revision {
    font-size: 12px;
    padding-top: 2px;
    overflow: auto;
}

.platform {
    font-size: 12px;
    padding-left: 0;
    padding-right: 5px;
}

.result-set {
    padding-bottom: 5px;
    margin-left: 0;
    white-space: normal;
    width: 100%;
    border-top: 1px solid lightgrey;
}

.result-set-title {
    border-top: 1px solid black;
    padding: 5px 0 5px 0;
    white-space: nowrap;
}

.result-set-title-left {
    width: 600px;
    padding-right: 10px;
    white-space: nowrap;
}

.result-set .revision-list {
    padding-left: 0;
}

.revision-link {
    padding-top: 5px;
    width: 115px;
    display: block;
}

.revision-button {
    width: 60px;
}

.revision-list {
    overflow: auto;
    white-space: nowrap;
}

.result-set .job-list-pad-left {
    padding-left: 8;
    padding-right: 0;
}

.result-set .job-list-nopad {
    padding-left: 0;
    padding-right: 0;
}

.selected-job {
    border: 5px solid black;
}

.job-group {
    margin: 0 -4px 0 3px;
}

.job-group-r-paren {
    margin: 0 3px 0 1px;
}

.job-btn {
  margin: 0 -3px 0 0;
  padding: 0 2px 0 2px;
}

div.navbar-fixed-bottom{
    border-top: 1px solid #ccc;
    padding:5px 10px;
    height:270px;
}

.table-super-condensed thead > tr > th,
.table-super-condensed tbody > tr > th,
.table-super-condensed tfoot > tr > th,
.table-super-condensed thead > tr > td,
.table-super-condensed tbody > tr > td,
.table-super-condensed tfoot > tr > td {
    padding: 2px;
    font-size: .9em;
}

/*
 * bottom panel
 */
.shadowed-panel {
    box-shadow: 0px 1px 0px rgba(255, 255, 255, 0.1), 0px 0px 2px 0px rgba(0, 0, 0, 0.8) inset;
    margin:0;
}
.bottom-panel {
    background-color: #354048;
}

.bottom-panel-title {
    color: lightgray;
}

div.navbar-fixed-bottom .tab-content{
    height: calc(100% - 22px);
    overflow-y: auto;
}

.bottom-panel-tabs {
    height: 100%;
}

.bottom-panel-tabs .nav li a {
    padding: 1px 10px 2px 10px;
}

div.navbar-fixed-bottom dt,
div.navbar-fixed-bottom dt {
    font-size:.8em;
}
#bottom-left-panel {width:242px; position: absolute; left:5px;}
#bottom-left-panel .panel{padding:5px;}
#bottom-center-panel {
    margin-right: 90px;
    margin-left: 242px;
}
#bottom-menu {position: absolute; right:-5px; width: 100px}

.result-status-shading-success {background-color: rgba(2, 131, 44, 0.24);}
.result-status-shading-testfailed {background-color: rgba(221, 102, 2, 0.25);}
.result-status-shading-busted {background-color: rgba(144, 0, 0, 0.25);}
.result-status-shading-exception {background-color: rgba(61, 2, 85, 0.25);}
.result-status-shading-retry {background-color: rgba(38, 63, 195, 0.25);}
.result-status-shading-usercancel {background-color: rgba(250, 115, 172, 0.25)}
.result-status-shading-pending {background-color: white;}
.result-status-shading-running {background-color: white;}

.bottom-shadowed-panel-with-pinboard {
    height: calc(100% - 75px);
}

.bottom-shadowed-panel-without-pinboard {
    height: calc(100% - 20px);
}

.bottom-menu-group {
    width: 90px;
    margin-bottom: 5px;
}

.save-btn {
    width: 73px;
}

.save-btn-dropdown {
    width: 18px;
}

.btn-group + .btn + .save-btn-dropdown {
    margin-left: -5px;
}
/*
 * pinboard
 */

.with-pinboard-abs {
    top: 80px;
}
.with-pinboard-margin {
    margin-top: 3px;
}
.without-pinboard-abs {
    top: 25px;
}

#pinboard-panel {
    margin-right: 527px;
    margin-left: -5px;
}

.pinboard-shadowed-panel {
    height: 52px;
    padding: 2px;
    overflow: auto;
}

#pinboard-related-bugs-panel {
    top: 5px;
    height: 95px;
    position: absolute;
    right: 290px;
    width: 242px;
}

.pinboard-related-bug {
    margin: 2px 1px;
}

#pinboard-classification-panel {
    position: absolute;
    top: 5px;
    right:100px;
    width: 185px;
}

.pinboard-classification-comment {
    width: 185px;
    margin-top: 5px;
}

.pinboard-classification-select {
    width: 185px;
}

.pinned-job {
    padding: 1px 7px;
}

.pinned-job-close-btn {
    padding: 1px 2px 1px 2px;
}

.btn-icon-top-margin {
    margin-top: 0.3em;
}

.panel-body{
    padding:5px;
    height: 100%;
}

.timestamp-name {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.annotations-panel {
    overflow: scroll;
    margin-right: 0;
}

.classifications-panel {
    border-right: solid 1px lightgray;
}

.bug-list-panel {
    right: 0;
}

.bug-list {
    list-style: none inside none;
    padding-left: 0;
}

/**
 * RESULT STATUS COUNTS
 */

.result-status-count-group {
    font-size: 12px;
    white-space: nowrap;
    display: inline-block;
    width: 500px;
}
.result-status-count {
    padding: 5px 5px;
    display: inline-block;
    cursor: pointer;
}
.result-status-total-count {
    width: 60px;
}
.result-status-count-min-width {
    width: 28px;
}
.result-status-count-success {
    width: 75px;
}
.result-status-count-retry {
    width: 52px;
}
.result-status-count-busted {
    width: 70px;
}
/* ... */

